--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,14 @@
 .center-header .ag-header-cell-label {
    justify-content: center;
 }
+
+.ag-theme-alpine.color-fonts {
+    --ag-foreground-color: rgb(126, 46, 132);
+    --ag-background-color: rgb(249, 245, 227);
+    --ag-header-foreground-color: rgb(204, 245, 172);
+    --ag-header-background-color: rgb(209, 64, 129);
+    --ag-odd-row-background-color: rgb(0, 0, 0, 0.05);
+    --ag-header-column-resize-handle-color: rgb(126, 46, 132);
+
+    --ag-font-size: 17px;
+}
